<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:padding="2dp"
        app:cardBackgroundColor="#7b1fa2"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6200EA"
            android:backgroundTint="#D32F2F"
            android:backgroundTintMode="screen">

            <CheckBox
                android:id="@+id/checkBoxSeleccion"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:buttonTint="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/tv_tareaNueva"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tareaNueva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/tv_tareaNueva"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/checkBoxSeleccion"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_fechaNueva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/tv_fecha_nueva"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tareaNueva" />

            <ImageButton
                android:id="@+id/btn_Fav_blanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_estrella_1_blanco" />

            <ImageButton
                android:id="@+id/btn_Fav_amarillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_estrella_1" />

            <ImageButton
                android:id="@+id/btn_eliminar"
                android:layout_width="24dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_Fav_amarillo"
                app:srcCompat="@drawable/eliminar__1_" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="#FFFFFF"
            android:padding="3dp">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>